
	libpurple:
	* We now honor a PURPLE_DISABLE_DEPRECATED define to allow plugins to
	  catch deprecated functions earlier rather than later.

	Pidgin:
	* If a plugin says it can't be unloaded, we now display an error and
	  remove the plugin from the list of saved plugins so it won't load
	  at the next startup.  Previously, we were ignoring this case, which
	  could lead to crashes.

	Finch:
	* If a plugin says it can't be unloaded, we now display an error and
	  remove the plugin from the list of saved plugins so it won't load
	  at the next startup.  Previously, we were ignoring this case, which
	  could lead to crashes.

version 2.2.2:
	http://developer.pidgin.im/query?status=closed&milestone=2.2.2
		NOTE: Due to 2.2.1 being a security fix release, some bugs
		      marked fixed in 2.2.1 may not have been fixed until
		      this release (2.2.2).

	libpurple:
	* Real usernames are now shown in the system log.

	Pidgin:
	* If you alias a buddy to an alias that is already present within
	  a particular group, we now offer to merge the buddies into the
	  same contact.
	* A music emblem is now displayed in the buddy list for a buddy if we
	  know she is listening to some soothing music.
	* Added a 'Move to' menu in buddy list context menu for moving buddies
	  to other groups as an alternative to dragging.
	* Group headings are now marked via an underline instead of a
	  different color background.
	* It is now possible to mark a chat on your buddy list as "Persistent"
	  so you do not leave the chat when the window or tab is closed.
	* The auto-join option for chats is now listed in the "Add Chat"
	  dialog along with the new persistence option.
	* Closing an IM no longer immediately closes your conversation.  It
	  will now remain active for a short time so that if the conversation
	  resumes, the history will be retained.  A preference has been added
	  to toggle this behavior.
	* The "Smiley" menu has been moved to the top-level of the toolbar.