@@ -31,29 +31,41 @@
 /**
  * Displays a New Buddy Pounce or Edit Buddy Pounce dialog.
  *
- * @param parent     The parent window.
  * @param account    The optional account to use.
  * @param name       The optional name to pounce on.
  * @param cur_pounce The current buddy pounce, if editing an existing one.
- */
-void pidgin_pounce_editor_show_with_parent(GtkWindow *parent, PurpleAccount *account, const char *name,
-								PurplePounce *cur_pounce);
-
-/**
- * @deprecated Please use pidgin_pounce_editor_show_with_parent
+ *
+ * @deprecated Use pidgin_pounce_editor_show_with_parent() instead.
  */
 void pidgin_pounce_editor_show(PurpleAccount *account, const char *name,
 								PurplePounce *cur_pounce);
 
 /**
- * Shows the pounces manager window.
+ * Displays a New Buddy Pounce or Edit Buddy Pounce dialog.
+ *
+ * @param parent     The parent window.
+ * @param account    The optional account to use.
+ * @param name       The optional name to pounce on.
+ * @param cur_pounce The current buddy pounce, if editing an existing one.
+ *
+ * @since 2.3.0
  */
-void pidgin_pounces_manager_show_with_parent(GtkWindow *parent);
+void pidgin_pounce_editor_show_with_parent(GtkWindow *parent, PurpleAccount *account, const char *name,
+								PurplePounce *cur_pounce);
 
 /**
- * @deprecated Please use pidgin_pounces_manager_show_with_parent
+ * Shows the pounces manager window.
+ *
+ * @deprecated Use pidgin_pounces_manager_show_with_parent() instead.
  */
 void pidgin_pounces_manager_show(void);
+
+/**
+ * Shows the pounces manager window.
+ *
+ * @since 2.3.0
+ */
+void pidgin_pounces_manager_show_with_parent(GtkWindow *parent);
 
 /**
  * Hides the pounces manager window.
